--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -27,4 +25,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'org.jetbrains.anko:anko:0.10.4'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
