--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
         <activity android:name=".okHttp.OkHttpActivity" />
         <activity android:name=".eventBus.EventBusActivity" />
+        <activity android:name=".retrofit.RetrofitActivity" />
 
     </application>
 
