--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".retrofit.RetrofitActivity" />
         <activity android:name=".glide.GlideActivity" />
         <activity android:name=".picasso.PicassoActivity" />
+        <activity android:name=".rxjava2.RxJava2Activity" />
 
     </application>
 
