--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
     implementation 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
