--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name="cn.ju.cv.barChart.BarChartActivity" />
         <activity android:name="cn.ju.cv.lineChart.LineChartActivity" />
         <activity android:name="cn.ju.cv.cureView.CureViewActivity" />
+        <activity android:name="cn.ju.cv.codeView.ActivityCodeView" />
+
     </application>
 
 </manifest>
