--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,12 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.anko:anko:0.10.5'
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     // source code
@@ -42,4 +46,5 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.16'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 }
