--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,24 +29,36 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    // view
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+
+    // kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.jetbrains.anko:anko:0.10.5'
-    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
-    // source code
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+
+    // rx
+    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.4.0'
     //    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
-    implementation 'com.google.dagger:dagger:2.16'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
-    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0' // include rxjava2
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+
+    // dagger2
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
+    implementation 'com.google.dagger:dagger:2.16'
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
+    // log
     implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
-//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    
 }
