--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "cn.ju.sc"
-        minSdkVersion 15
+        applicationId "com.assess15.sc"
+        minSdkVersion 21
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -37,7 +37,7 @@ dependencies {
     // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'org.jetbrains.anko:anko:0.10.5'
-    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 //    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
 
     // rx
@@ -53,7 +53,7 @@ dependencies {
     api 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 
     // dagger2
-    kapt 'com.google.dagger:dagger-compiler:2.14.1'
+    kapt 'com.google.dagger:dagger-compiler:2.21'
     api 'com.google.dagger:dagger:2.21'
 
     // glide
