--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.assess15.sc"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -26,17 +26,17 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api 'com.android.support:appcompat-v7:27.1.1'
-    api 'com.android.support.constraint:constraint-layout:1.1.3'
-    api 'com.android.support:design:27.1.1'
-    api 'com.android.support:cardview-v7:27.1.1'
-
+    api 'androidx.appcompat:appcompat:1.0.2'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
+    api 'com.google.android.material:material:1.0.0'
+    api 'androidx.cardview:cardview:1.0.0'
     // view
     api 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
 
     // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    api 'org.jetbrains.anko:anko:0.10.5'
+//    api 'androidx.core:core-ktx:1.2.0-alpha02'
+    api 'org.jetbrains.anko:anko-commons:0.10.8'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
 //    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
 
