--- a/module_arch/build.gradle
+++ b/module_arch/build.gradle
@@ -19,7 +19,6 @@ android {
         versionCode android.versionCode
         versionName android.versionName
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -34,11 +33,8 @@ android {
 
 dependencies {
     api project(':module_base')
-    api project(':module_arch')
-    api project(':module_open_projects')
 
     def dependencies = rootProject.ext.dependencies
     kapt dependencies.arouterCompiler
-
-
+    kapt dependencies.daggerCompiler
 }
