--- a/config.gradle
+++ b/config.gradle
@@ -14,9 +14,9 @@ ext {
     dependencies = [
             // androidx
             cardview                : 'androidx.cardview:cardview:1.0.0',
-            material                : 'com.google.android.material:material:1.0.0',
             appcompat               : 'androidx.appcompat:appcompat:1.0.2',
             constraintlayout        : 'androidx.constraintlayout:constraintlayout:1.1.3',
+            material                : 'com.google.android.material:material:1.0.0',
 
             // kotlin
             kotlinStdlibJdk8        : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version",
@@ -29,20 +29,24 @@ ext {
             okhttp3                 : 'com.squareup.okhttp3:okhttp:3.14.2',
             eventbus3               : 'org.greenrobot:eventbus:3.1.1',
             retrofit                : 'com.squareup.retrofit2:retrofit:2.5.0',
-            converterGson           : 'com.squareup.retrofit2:converter-gson:2.5.0',
             adapterRxjava2          : 'com.squareup.retrofit2:adapter-rxjava2:2.5.0',
+            converterGson           : 'com.squareup.retrofit2:converter-gson:2.5.0',
             converterScalars        : 'com.squareup.retrofit2:converter-scalars:2.5.0',
+            converterMoshi          : "com.squareup.retrofit2:converter-moshi:2.0.2",
+//            converterProtobuf       : 'com.squareup.retrofit2:converter-protobuf:2.0.0-beta3',
+            // moshi
+            moshi                   : "com.squareup.moshi:moshi:1.8.0",
+            moshik                  : 'com.squareup.moshi:moshi-kotlin:1.8.0',
+
             //    api 'io.reactivex.rxjava2:rxjava:2.2.2'
             rxandroid               : 'io.reactivex.rxjava2:rxandroid:2.1.1',
             rxbinding               : 'com.jakewharton.rxbinding2:rxbinding:2.2.0', // include rxjava2
 
             // dagger2
-            daggerCompiler          : 'com.google.dagger:dagger-compiler:2.21',
             dagger                  : 'com.google.dagger:dagger:2.21',
 
             // ARouter
             arouterApi              : 'com.alibaba:arouter-api:1.5.0',
-            arouterCompiler         : 'com.alibaba:arouter-compiler:1.2.1',
 
             // glide
             glide3                  : 'com.github.bumptech.glide:glide:3.7.0',
@@ -54,8 +58,14 @@ ext {
             bottomNavigationBar     : 'com.ashokvarma.android:bottom-navigation-bar:2.1.0',
             // permissions
             rxpermissions           : 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-
     ]
 
-
+    kapts = [
+            // moshi
+            moshiKotlinCodegen: "com.squareup.moshi:moshi-kotlin-codegen:1.8.0",
+            // arouter
+            arouterCompiler   : 'com.alibaba:arouter-compiler:1.2.1',
+            // dagger
+            daggerCompiler    : 'com.google.dagger:dagger-compiler:2.21',
+    ]
 }
