--- a/module_open_projects/build.gradle
+++ b/module_open_projects/build.gradle
@@ -9,15 +9,18 @@ kapt {
     }
 }
 
-android {
-    def android = rootProject.ext.android
+def dep = rootProject.ext.dependencies
+def kap = rootProject.ext.kapts
+def and = rootProject.ext.android
 
-    compileSdkVersion android.compileSdkVersion
+android {
+    compileSdkVersion and.compileSdkVersion
+
     defaultConfig {
-        minSdkVersion android.minSdkVersion
-        targetSdkVersion android.targetSdkVersion
-        versionCode android.versionCode
-        versionName android.versionName
+        minSdkVersion and.minSdkVersion
+        targetSdkVersion and.targetSdkVersion
+        versionCode and.versionCode
+        versionName and.versionName
     }
     buildTypes {
         release {
@@ -26,15 +29,15 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility android.sourceCompatibility
-        targetCompatibility android.targetCompatibility
+        sourceCompatibility and.sourceCompatibility
+        targetCompatibility and.targetCompatibility
     }
 }
 
 dependencies {
     api project(':module_base')
 
-    def dependencies = rootProject.ext.dependencies
-    kapt dependencies.arouterCompiler
-    kapt dependencies.daggerCompiler
+    kapt kap.arouterCompiler
+    kapt kap.daggerCompiler
+    kapt kap.moshiKotlinCodegen
 }
