--- a/module_open_projects/build.gradle
+++ b/module_open_projects/build.gradle
@@ -40,4 +40,7 @@ dependencies {
     kapt kap.arouterCompiler
     kapt kap.daggerCompiler
     kapt kap.moshiKotlinCodegen
+
+//    kapt kap.daggerAndroidCompiler
+    annotationProcessor kap.daggerAndroidCompiler
 }
