--- a/config.gradle
+++ b/config.gradle
@@ -14,7 +14,7 @@ ext {
     dependencies = [
             // androidx
             cardview                : 'androidx.cardview:cardview:1.0.0',
-            appcompat               : 'androidx.appcompat:appcompat:1.0.2',
+            appcompat               : 'androidx.appcompat:appcompat:1.1.0',
             constraintlayout        : 'androidx.constraintlayout:constraintlayout:1.1.3',
             material                : 'com.google.android.material:material:1.0.0',
 
@@ -48,8 +48,8 @@ ext {
 
             // dagger2
             dagger                  : 'com.google.dagger:dagger:2.24',
-            daggerAndroid           : 'com.google.dagger:dagger-android:2.17',
-            daggerAndroidSupport    : 'com.google.dagger:dagger-android-support:2.17',
+            daggerAndroid           : 'com.google.dagger:dagger-android:2.24',
+//            daggerAndroidSupport    : 'com.google.dagger:dagger-android-support:2.24',
             // ARouter
             arouterApi              : 'com.alibaba:arouter-api:1.5.0',
             // wmrouter
@@ -77,7 +77,7 @@ ext {
             // wmRouterCompiler  : 'com.sankuai.waimai.router:compiler:1.x',
             // dagger
             daggerCompiler       : 'com.google.dagger:dagger-compiler:2.24',
-            daggerAndroidCompiler: 'com.google.dagger:dagger-android-processor:2.17',
+            daggerAndroidCompiler: 'com.google.dagger:dagger-android-processor:2.24',
             eventbusProcessor    : 'org.greenrobot:eventbus-annotation-processor:3.1.1'
     ]
 
